[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_coincheck"
version = "0.1.0"
description = "Coincheck exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["bt_api_base"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_coincheck"]
