[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_coincheck"
version = "0.1.0"
description = "Coincheck exchange plugin for bt_api framework - Japanese cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "coincheck",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto",
    "japan"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_coincheck"
Documentation = "https://bt-api-coincheck.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_coincheck"
Issues = "https://github.com/cloudQuant/bt_api_coincheck/issues"
Changelog = "https://github.com/cloudQuant/bt_api_coincheck/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_coincheck"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TC",    # type-checking imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "TC002", # Move third-party import into TYPE_CHECKING block (manual review needed)
]

[tool.ruff.lint.isort]
known-first-party = ["bt_api_coincheck"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
